--- a/a1-english-tests.html
+++ b/a1-english-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free A1 English tests</title>
+    <title>Free A1 Beginner English Tests | Free Practice for Basic English Skills</title>
     <meta name="description" content="Practice beginner-level English with our free A1 tests. Perfect for those starting their English language journey with basic vocabulary and simple grammar.">
     <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     	<meta name="author" content="englishtests.online">
