--- a/a2-english-tests.html
+++ b/a2-english-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free A2 English tests</title>
+    <title>Free A2 Elementary English Tests | Free Practice for Essential English</title>
     <meta name="description" content="Free A2 level English tests for elementary learners. Practice everyday phrases, simple conversations, and basic grammar structures.">
     <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     	<meta name="author" content="englishtests.online">
