--- a/b1-english-tests.html
+++ b/b1-english-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free B1 English tests</title>
+    <title>Free B1 Intermediate English Tests | Free Practice for Everyday English</title>
     <meta name="description" content="Intermediate English practice with free B1 level tests. Improve your ability to discuss familiar topics, express opinions, and understand main points of clear texts.">
     <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     	<meta name="author" content="englishtests.online">
