--- a/b2-english-tests.html
+++ b/b2-english-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free B2 English tests</title>
+    <title>Free B2 Upper-Intermediate English Tests | Free Practice for Fluent Communication</title>
     <meta name="description" content="Upper-intermediate B2 English tests for free. Practice complex grammar, abstract topics, technical discussions, and fluent interaction with native speakers.">
     <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     	<meta name="author" content="englishtests.online">
