--- a/c1-english-tests.html
+++ b/c1-english-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free C1 English tests</title>
+    <title>Free C1 Advanced English Tests | Free Practice for Professional English</title>
     <meta name="description" content="Advanced English practice with free C1 level tests. Enhance your ability to express ideas fluently, understand demanding texts, and use language flexibly.">
     <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     	<meta name="author" content="englishtests.online">
