--- a/c2-english-tests.html
+++ b/c2-english-tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free C2 English tests</title>
+    <title>Free C2 Proficiency English Tests | Free Practice for Mastery-Level English</title>
     <meta name="description" content="Master proficiency-level English with free C2 tests. Perfect your understanding of nuanced expressions, idioms, and complex grammatical structures.">
     <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     	<meta name="author" content="englishtests.online">
