--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             align-items: center;
             width: 90%;
             max-width: 500px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             position: relative;
         }
 
@@ -224,7 +224,7 @@
         .main-button-container {
             width: 90%;
             max-width: 500px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         .main-button {
@@ -348,6 +348,7 @@
         <div class="site-name">englishtests.online</div>
 
         <div class="dropdown-menu" id="sandwichDropdown">
+            <a href="#about">Learning English</a>
             <a href="#about">About Us</a>
             <a href="#terms">Terms of Use</a>
             <a href="#privacy">Privacy Policy</a>
@@ -360,12 +361,12 @@
     </div>
 
     <div class="button-grid">
-        <a href="https://englishtests.online/a1-english-tests" class="level-button a1">A1 level tests</a>
-        <a href="https://englishtests.online/a2-english-tests" class="level-button a2">A2 level tests</a>
-        <a href="https://englishtests.online/b1-english-tests" class="level-button b1">B1 level tests</a>
-        <a href="https://englishtests.online/b2-english-tests" class="level-button b2">B2 level tests</a>
-        <a href="https://englishtests.online/c1-english-tests" class="level-button c1">C1 level tests</a>
-        <a href="https://englishtests.online/c2-english-tests" class="level-button c2">C2 level tests</a>
+        <a href="https://englishtests.online/a1-english-tests" class="level-button a1">A1 English tests</a>
+        <a href="https://englishtests.online/a2-english-tests" class="level-button a2">A2 English tests</a>
+        <a href="https://englishtests.online/b1-english-tests" class="level-button b1">B1 English tests</a>
+        <a href="https://englishtests.online/b2-english-tests" class="level-button b2">B2 English tests</a>
+        <a href="https://englishtests.online/c1-english-tests" class="level-button c1">C1 English tests</a>
+        <a href="https://englishtests.online/c2-english-tests" class="level-button c2">C2 English tests</a>
         <a href="https://englishtests.online/findword" class="level-button findword">FindWord</a>
     </div>
 
