--- a/index.html
+++ b/index.html
@@ -304,6 +304,43 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
         }
 
+        /* Footer Styling */
+    .footer {
+        background-color: #2c3e50;
+        color: #ffffff;
+        text-align: center;
+        padding: 40px 20px;
+        margin-top: 50px;
+        width: 100%;
+    }
+
+.footer-content {
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer p {
+    margin: 5px 0;
+    font-size: 1.1em;
+    font-weight: 300;
+}
+
+.footer-spacer {
+    height: 30px;
+    width: 100%;
+}
+
+.footer-made {
+    margin-top: 10px;
+}
+
+.footer-maker {
+    font-size: 1.3em;
+}
+
         /* Theme Toggle Button Removed */
 
         /* Mobile adjustments */
@@ -370,7 +407,18 @@
         <a href="https://englishtests.online/findword" class="level-button findword">FindWord</a>
     </div>
 
-
+    <footer class="footer">
+    <div class="footer-content">
+        <p>© Copyright 2025</p>
+        <p><a href="mailto:info@englishtests.online" class="footer-email">info@englishtests.online</a></p>
+        <p>All rights reserved.</p>
+        
+        <div class="footer-spacer"></div>
+        
+        <p class="footer-made">Made by</p>
+        <a href="https://englishtests.online/findword" class="footer-maker">KubiKDB</a>
+    </div>
+    </footer>
 
     <script>
         // Enhanced menu toggle with animation
