--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         /* Color Palette - Modern UI/UX with Dark Theme Support */
         :root {
             /* Light Theme */
-            --primary-background: #f9f9f9;
+            --primary-background: #ffffff;
             --primary-color: #3498db;
             --primary-color-darker: #2980b9;
             --primary-color-lighter: #5dade2;
@@ -423,12 +423,11 @@
     <div class="footer-content">
         <p>© Copyright 2025</p>
         <p><a href="mailto:info@englishtests.online" class="footer-email">info@englishtests.online</a></p>
-        <p>All rights reserved.</p>
+        <p>All rights reserved</p>
         
         <div class="footer-spacer"></div>
         
-        <p class="footer-made">Made by</p>
-        <a href="https://englishtests.online/findword" class="footer-maker">KubiKDB</a>
+        <p class="footer-made">Made by <a href="https://englishtests.online/findword" class="footer-maker">KubiKDB</a></p>
     </div>
     </footer>
 
