--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         <p>© Copyright 2025</p>
         <p><a href="mailto:info@englishtests.online" class="footer-email">info@englishtests.online</a></p>
         <p>All rights reserved</p>        
-        <p class="footer-made">Made by <a href="https://englishtests.online/findword" class="footer-maker">KubiKDB</a></p>
+        <p class="footer-made">Made by <a href="https://englishtests.online/findword" class="footer-made">KubiKDB</a></p>
     </div>
     </footer>
 </body>
