--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <div class="sandwich-bar"></div>
             <div class="sandwich-bar"></div>
         </div>
-        <div class="site-name">englishtests.online</div>
+        <div class="site-name">Free English tests</div>
 
         <div class="dropdown-menu" id="sandwichDropdown">
             <a href="#about">Learning English</a>
