--- a/c2-english-tests.html
+++ b/c2-english-tests.html
@@ -37,7 +37,7 @@
     <style>
         /* Color Palette - Modern UI/UX - Matching the index.html */
         :root {
-            --primary-background: #f9f9f9;
+            --primary-background: #ffffff;
             --primary-color: #3498db;
             --primary-color-darker: #2980b9;
             --primary-color-lighter: #5dade2;
