--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
         color: #000000;
         text-align: center;
         padding: 40px 20px;
+        margin: 150px;
         width: 100%;
         flex-shrink: 0;
     }
