--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     .footer {
         background-color: #ffffff;
         color: #000000;
-        text-align: center;
+        text-align: bottom;
         padding: 40px 20px;
         margin: 50px;
         width: 100%;
