--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         background-color: #ffffff;
         color: #000000;
         text-align: bottom;
-        padding: 40px 20px;
+        padding: 5px;
         margin: 50px;
         width: 100%;
         flex-shrink: 0;
