--- a/index.html
+++ b/index.html
@@ -305,27 +305,15 @@
             transform: translateY(0);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
         }
-
-        /* Add these styles to your body and html elements */
-        html, body {
-          height: 100%;
-          margin: 0;
-        }
-
-        /* Main content area that will grow to push footer down */
-        main {
-          flex: 1 0 auto; /* This makes the main content expand */
-        }
-
+        
     /* Footer Styling */
     .footer {
         background-color: #ffffff;
         color: #000000;
-        text-align: bottom;
+        text-align: center;
         padding: 5px;
         margin: 50px;
         width: 100%;
-        flex-shrink: 0;
     }
     
     .footer-content {
