--- a/c1-english-tests.html
+++ b/c1-english-tests.html
@@ -267,7 +267,7 @@
         background-color: #ffffff;
         color: #000000;
         text-align: center;
-        padding: 40px 20px;
+        padding: 5px;
         margin-top: 50px;
         width: 100%;
     }
