--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     .footer {
         background-color: #ffffff;
         color: #000000;
-        text-align: center;
+        text-align: bottom;
         padding: 5px;
         margin: 50px;
         width: 100%;
