--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         color: #000000;
         text-align: bottom;
         padding: 5px;
-        margin: 50px;
+        margin-top: 50px;
         width: 100%;
     }
     
