--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -91,7 +91,8 @@
         text-align: bottom;
         padding: 5px;
         margin-top: 50px;
-        width: 100%;
+/*         width: 100%; */
+	max-width: 800px;
         flex-shrink: 0;
     }
     
