--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -39,6 +39,7 @@
             font-family: Arial, sans-serif;
             margin: 40px;
 	    max-width: 800px;
+	    padding: 15px;
         }
         .question {
             margin-bottom: 20px;
