--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -40,6 +40,7 @@
             margin: 40px;
 	    max-width: 800px;
 	    padding: 10px;
+	    text-align: center;
         }
         .question {
             margin-bottom: 20px;
