--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -40,7 +40,6 @@
             margin: 40px;
 	    max-width: 800px;
 	    padding: 10px;
-	    text-align: center;
         }
         .question {
             margin-bottom: 20px;
@@ -138,7 +137,7 @@
     </style>
 </head>
 <body>
-    <h2>Test Your English Level</h2>
+    <h2 text-align="center">Test Your English Level</h2>
     <div id="passageContainer"></div>
     <form id="quizForm"></form>
     <button type="submit" class="submit-btn" id="submitBtn">Submit</button>
