--- a/test-your-english-level.html
+++ b/test-your-english-level.html
@@ -137,7 +137,7 @@
     </style>
 </head>
 <body>
-    <h2 text-align="center">Test Your English Level</h2>
+    <h2 style="text-align: center;">Test Your English Level</h2>
     <div id="passageContainer"></div>
     <form id="quizForm"></form>
     <button type="submit" class="submit-btn" id="submitBtn">Submit</button>
