--- a/b1-english-tests.html
+++ b/b1-english-tests.html
@@ -406,9 +406,10 @@
         for (let i = 1; i <= 100; i++) {
             const square = document.createElement('div');
             square.classList.add('test-square');
+            // square.href = `https://kubikdb.github.io/test-english-level/b2?level=${i}`; // Set the link URL
             square.textContent = i;
             // You can add an onclick event to each square if needed
-            // square.onclick = function() { window.location.href = 'test' + i + '.html'; };
+            square.onclick = function() { window.location.href = `https://englishtests.online/test-page?diff=B1&level=${i}`; };
             gridContainer.appendChild(square);
         }
     </script>
