--- a/test-page.html
+++ b/test-page.html
@@ -10,6 +10,7 @@
             margin: 40px;
             max-width: 800px;
             padding: 10px;
+            align-items: center;
         }
         .question {
             margin-bottom: 20px;
