--- a/test-page.html
+++ b/test-page.html
@@ -7,9 +7,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
+            margin: 40px auto;
             max-width: 800px;
             padding: 10px;
+            display: flex;
+            flex-direction: column;
             align-items: center;
         }
         .question {
@@ -18,6 +20,8 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             background-color: #f9f9f9;
+            width: 100%;
+            text-align: center;
         }
         .passage {
             margin-bottom: 20px;
@@ -25,6 +29,8 @@
             border: 1px solid #444;
             border-radius: 5px;
             background-color: #e3f2fd;
+            width: 100%;
+            text-align: center;
         }
         .submit-btn {
             margin-top: 20px;
@@ -167,7 +173,8 @@
             </svg>
         </a>
     </div>
-    <div id="passageContainer"></div> <form id="quizForm"></form>
+    <div id="passageContainer" style="width: 100%;"></div> 
+    <form id="quizForm" style="width: 100%; display: flex; flex-direction: column; align-items: center;"></form>
     <button type="submit" class="submit-btn" id="submitBtn">Submit</button>
     <div id="result" class="result"></div>
     <script>
