--- a/test-page.html
+++ b/test-page.html
@@ -7,11 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px auto;
+            margin: 40px;
             max-width: 800px;
             padding: 10px;
-            display: flex;
-            flex-direction: column;
             align-items: center;
         }
         .question {
@@ -20,8 +18,6 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             background-color: #f9f9f9;
-            width: 100%;
-            text-align: center;
         }
         .passage {
             margin-bottom: 20px;
@@ -29,8 +25,6 @@
             border: 1px solid #444;
             border-radius: 5px;
             background-color: #e3f2fd;
-            width: 100%;
-            text-align: center;
         }
         .submit-btn {
             margin-top: 20px;
@@ -173,8 +167,7 @@
             </svg>
         </a>
     </div>
-    <div id="passageContainer" style="width: 100%;"></div> 
-    <form id="quizForm" style="width: 100%; display: flex; flex-direction: column; align-items: center;"></form>
+    <div id="passageContainer"></div> <form id="quizForm"></form>
     <button type="submit" class="submit-btn" id="submitBtn">Submit</button>
     <div id="result" class="result"></div>
     <script>
