--- a/test-page.html
+++ b/test-page.html
@@ -156,9 +156,9 @@
 <body>
     <div class="header">
         <a href="javascript:history.back()" class="home-button">
-            <svg width="83" height="74" viewBox="0 0 83 74" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1.46447 33.4645C-0.488155 35.4171 -0.488155 38.5829 1.46447 40.5355L33.2843 72.3553C35.2369 74.308 38.4027 74.308 40.3553 72.3553C42.308 70.4027 42.308 67.2369 40.3553 65.2843L12.0711 37L40.3553 8.71573C42.308 6.76311 42.308 3.59728 40.3553 1.64466C38.4027 -0.307961 35.2369 -0.307961 33.2843 1.64466L1.46447 33.4645ZM78 32L5 32V42L78 42V32Z" fill="#3498DB"/>
-                <circle cx="78" cy="37" r="5" fill="#3498DB"/>
+            <svg width="36" height="30" viewBox="0 0 36 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.585786 13.5858C-0.195262 14.3668 -0.195262 15.6332 0.585786 16.4142L13.3137 29.1421C14.0948 29.9232 15.3611 29.9232 16.1421 29.1421C16.9232 28.3611 16.9232 27.0948 16.1421 26.3137L4.82843 15L16.1421 3.68629C16.9232 2.90524 16.9232 1.63891 16.1421 0.857864C15.3611 0.0768158 14.0948 0.0768158 13.3137 0.857864L0.585786 13.5858ZM34 13L2 13V17L34 17V13Z" fill="#3498DB"/>
+                <circle cx="34" cy="15" r="2" fill="#3498DB"/>
             </svg>
         </a>
         <h2>English Language Test</h2>
