--- a/index.html
+++ b/index.html
@@ -411,11 +411,11 @@
         <div class="site-name">Free English tests</div>
 
         <div class="dropdown-menu" id="sandwichDropdown">
-            <a href="#about">Learning English</a>
-            <a href="#about">About Us</a>
-            <a href="#terms">Terms of Use</a>
-            <a href="#privacy">Privacy Policy</a>
-            <a href="#findword">FindWord Puzzle</a>
+            <a href="https://englishtests.online/how-to-learn-english-effectively">Learning English</a>
+            <a href="https://englishtests.online/about-us">About Us</a>
+            <a href="https://englishtests.online/terms-of-use">Terms of Use</a>
+            <a href="https://englishtests.online/privacy-policy">Privacy Policy</a>
+            <a href="https://englishtests.online/findword">FindWord Puzzle</a>
         </div>
     </div>
 
