--- a/a1-english-tests.html
+++ b/a1-english-tests.html
@@ -366,10 +366,11 @@
         </a>
 
         <div class="dropdown-menu" id="sandwichDropdown">
-            <a href="#about">About Us</a>
-            <a href="#terms">Terms of Use</a>
-            <a href="#privacy">Privacy Policy</a>
-            <a href="#findword">FindWord Puzzle</a>
+            <a href="https://englishtests.online/how-to-learn-english-effectively">Learning English</a>
+            <a href="https://englishtests.online/about-us">About Us</a>
+            <a href="https://englishtests.online/terms-of-use">Terms of Use</a>
+            <a href="https://englishtests.online/privacy-policy">Privacy Policy</a>
+            <a href="https://englishtests.online/findword">FindWord Puzzle</a>
         </div>
     </div>
 
