--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
             color: #333;
             max-width: 800px;
             margin: 0 auto;
-            padding: 0px;
+            padding: 0px 10px;
         }
         header {
             display: flex;
