--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Terms of Use for englishtests.online. Please read these terms carefully before using our free English tests for all CEFR levels (A1-C2).">
     
     <!-- Meta Keywords - Still useful for some search engines -->
-    <meta name="keywords" content="terms of use, english tests terms, englishtests.online terms, free english tests, english learning online, english assessment">
+    <meta name="keywords" content="englishtests.online terms">
     
     <!-- Open Graph Meta Tags for better social sharing -->
     <meta property="og:title" content="Terms of Use | englishtests.online">
