--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <meta name="keywords" content="English tests online, Free English tests, English level test, English proficiency test, Test your English level, English language assessment, English grammar tests, English vocabulary tests, TOEFL English tests, IELTS English tests, SAT English tests, Online English exercises, CEFR English tests">
     <meta name="author" content="englishtests.online">
     <meta name="robots" content="index, follow">
+
+    <!-- Open Graph Meta Tags for better social sharing -->
+    <meta property="og:title" content="Free English tests online | englishtests.online">
+    <meta property="og:description" content="Test your English proficiency with hundreds of free online tests covering all CEFR levels from A1 to C2. Improve your grammar, vocabulary, and reading skills.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://englishtests.online">
+    
+    <!-- Canonical URL to prevent duplicate content issues -->
+    <link rel="canonical" href="https://englishtests.online">
     <!-- Schema.org Markup for Google -->
 <script type="application/ld+json">
 {
