--- a/findword.html
+++ b/findword.html
@@ -228,14 +228,14 @@
             
             <div class="download-buttons">
                 <a href="https://play.google.com/store/apps/details?id=com.daniel.findword" class="download-button">
-                    <img src="/api/placeholder/24/24" alt="Google Play Icon">
+                    <img src="googleplay.svg" alt="Google Play Icon">
                     <div class="button-text">
                         <span class="button-small-text">GET IT ON</span>
                         <span class="button-large-text">Google Play</span>
                     </div>
                 </a>
                 <a href="https://apps.apple.com/app/findword/id6471604639" class="download-button">
-                    <img src="/api/placeholder/24/24" alt="App Store Icon">
+                    <img src="appstore.svg" alt="App Store Icon">
                     <div class="button-text">
                         <span class="button-small-text">DOWNLOAD ON THE</span>
                         <span class="button-large-text">App Store</span>
