--- a/findword.html
+++ b/findword.html
@@ -175,6 +175,7 @@
             border-radius: 8px;
             text-decoration: none;
             transition: all 0.3s ease;
+	    width: 220px;
             border: none;
             cursor: pointer;
         }
