--- a/b2-english-tests.html
+++ b/b2-english-tests.html
@@ -419,7 +419,7 @@
         <p>© Copyright 2025</p>
         <p><a href="mailto:info@englishtests.online" class="footer-email">info@englishtests.online</a></p>
         <p>All rights reserved</p>        
-        <p class="footer-made">Made by <a href="https://englishtests.online/findword" class="footer-email">KubiKDB</a></p>
+        <p class="footer-made">Made by <a href="https://play.google.com/store/apps/dev?id=5093525609695433503" class="footer-email">KubiKDB</a></p>
     </div>
     </footer>
     
