--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <meta name="author" content="englishtests.online">
     <meta name="robots" content="index, follow">
 
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K2TNG0KVK8');
+    </script>
+
     <!-- Open Graph Meta Tags for better social sharing -->
     <meta property="og:title" content="Free English tests online | englishtests.online">
     <meta property="og:description" content="Test your English proficiency with hundreds of free online tests covering all CEFR levels from A1 to C2. Improve your grammar, vocabulary, and reading skills.">
