--- a/about-us.html
+++ b/about-us.html
@@ -16,6 +16,15 @@
     <meta property="og:description" content="Practice and improve your English with hundreds of free tests for all proficiency levels from beginner to advanced.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://englishtests.online/about-us">
+
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2TNG0KVK8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K2TNG0KVK8');
+    </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
     <link rel="canonical" href="https://englishtests.online/about-us">
