--- a/findword.html
+++ b/findword.html
@@ -16,6 +16,15 @@
     <meta property="og:description" content="Challenge yourself with FindWord, a daily word puzzle game with 144 random letters. Find English words and compete with friends worldwide.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://englishtests.online/findword">
+
+	<!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2TNG0KVK8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K2TNG0KVK8');
+    </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
     <link rel="canonical" href="https://englishtests.online/findword">
