--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,6 +16,15 @@
     <meta property="og:description" content="Read our Privacy Policy to understand how we collect, use, and protect your information when using our free English tests.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://englishtests.online/privacy-policy">
+
+<!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2TNG0KVK8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K2TNG0KVK8');
+    </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
     <link rel="canonical" href="https://englishtests.online/privacy-policy">
