--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -16,6 +16,15 @@
     <meta property="og:description" content="Read the Terms of Use for englishtests.online before using our free English tests for all proficiency levels.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://englishtests.online/terms-of-use">
+
+<!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K2TNG0KVK8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-K2TNG0KVK8');
+    </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
     <link rel="canonical" href="https://englishtests.online/terms-of-use">
