--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <div class="sandwich-bar"></div>
             <div class="sandwich-bar"></div>
         </div>
-        <div class="site-name">Free English tests</div>
+        <h1 style="font-size: 20px;">Free English tests</h1>
 
         <div class="dropdown-menu" id="sandwichDropdown">
             <a href="https://englishtests.online/learn-english-effectively">Learning English</a>
