--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <div class="sandwich-bar"></div>
             <div class="sandwich-bar"></div>
         </div>
-        <h1 style="font-size: 20px; text-align: center;">Free English tests</h1>
+        <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Free English tests</h1>
 
         <div class="dropdown-menu" id="sandwichDropdown">
             <a href="https://englishtests.online/learn-english-effectively">Learning English</a>
