--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
     <meta property="og:title" content="Free English tests online | englishtests.online">
     <meta property="og:description" content="Test your English proficiency with hundreds of free online tests covering all CEFR levels from A1 to C2. Improve your grammar, vocabulary, and reading skills.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online">
+    <meta property="og:url" content="https://www.englishtests.online">
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online">
+    <link rel="canonical" href="https://www.englishtests.online">
     <!-- Schema.org Markup for Google -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "EducationalOrganization",
   "name": "Free English tests online",
-  "url": "https://englishtests.online",
+  "url": "https://www.englishtests.online",
   "description": "Free online English tests for all levels from A1 to C2. Practice and improve your English language skills with hundreds of free tests and exercises."
 }
 </script>
@@ -56,7 +56,7 @@
   "provider": {
     "@type": "Organization",
     "name": "English Tests Online",
-    "url": "https://englishtests.online"
+    "url": "https://www.englishtests.online"
   }
 }
 </script>
@@ -435,26 +435,26 @@
         <h1 style="font-size: 24px; text-align: center; flex-grow: 1;">Free English tests</h1>
 
         <div class="dropdown-menu" id="sandwichDropdown">
-            <a href="https://englishtests.online/learn-english-effectively">Learning English</a>
-            <a href="https://englishtests.online/about-us">About Us</a>
-            <a href="https://englishtests.online/terms-of-use">Terms of Use</a>
-            <a href="https://englishtests.online/privacy-policy">Privacy Policy</a>
-            <a href="https://englishtests.online/findword">FindWord Puzzle</a>
+            <a href="https://www.englishtests.online/learn-english-effectively">Learning English</a>
+            <a href="https://www.englishtests.online/about-us">About Us</a>
+            <a href="https://www.englishtests.online/terms-of-use">Terms of Use</a>
+            <a href="https://www.englishtests.online/privacy-policy">Privacy Policy</a>
+            <a href="https://www.englishtests.online/findword">FindWord Puzzle</a>
         </div>
     </div>
 
     <div class="main-button-container">
-        <a href="https://englishtests.online/test-your-english-level" class="main-button">Test your English level</a>
+        <a href="https://www.englishtests.online/test-your-english-level" class="main-button">Test your English level</a>
     </div>
 
     <div class="button-grid">
-        <a href="https://englishtests.online/a1-english-tests" class="level-button a1">A1 English tests</a>
-        <a href="https://englishtests.online/a2-english-tests" class="level-button a2">A2 English tests</a>
-        <a href="https://englishtests.online/b1-english-tests" class="level-button b1">B1 English tests</a>
-        <a href="https://englishtests.online/b2-english-tests" class="level-button b2">B2 English tests</a>
-        <a href="https://englishtests.online/c1-english-tests" class="level-button c1">C1 English tests</a>
-        <a href="https://englishtests.online/c2-english-tests" class="level-button c2">C2 English tests</a>
-        <a href="https://englishtests.online/findword" class="level-button findword">FindWord</a>
+        <a href="https://www.englishtests.online/a1-english-tests" class="level-button a1">A1 English tests</a>
+        <a href="https://www.englishtests.online/a2-english-tests" class="level-button a2">A2 English tests</a>
+        <a href="https://www.englishtests.online/b1-english-tests" class="level-button b1">B1 English tests</a>
+        <a href="https://www.englishtests.online/b2-english-tests" class="level-button b2">B2 English tests</a>
+        <a href="https://www.englishtests.online/c1-english-tests" class="level-button c1">C1 English tests</a>
+        <a href="https://www.englishtests.online/c2-english-tests" class="level-button c2">C2 English tests</a>
+        <a href="https://www.englishtests.online/findword" class="level-button findword">FindWord</a>
     </div>
 
     <script>
