--- a/findword.html
+++ b/findword.html
@@ -241,7 +241,7 @@
 	<div class="flag-grid">
     <!-- Row 1 -->
     <a href="/bn" class="flag-link">
-        <img src="bangladesh.svg" alt="Bengali">
+        <img src="bangladesh.svg" alt="Bengali" class="flag-icon">
     </a>
     <a href="/pt-br" class="flag-link">
         <img src="brazil.svg" alt="Portuguese">
