--- a/findword.html
+++ b/findword.html
@@ -217,7 +217,7 @@
     .flag-icon {
         width: 100%;
         height: auto;
-        aspect-ratio: 3/2;
+        aspect-ratio: 32/20;
         display: block;
     }
     </style>
@@ -239,50 +239,47 @@
     
     <main>
 	<div class="flag-grid">
-    <!-- Row 1 -->
     <a href="/bn" class="flag-link">
         <img src="bangladesh.svg" alt="Bengali" class="flag-icon">
     </a>
     <a href="/pt-br" class="flag-link">
-        <img src="brazil.svg" alt="Portuguese">
+        <img src="brazil.svg" alt="Portuguese" class="flag-icon">
     </a>
     <a href="/zh-CN" class="flag-link">
-        <img src="china.svg" alt="Chinese">
+        <img src="china.svg" alt="Chinese" class="flag-icon">
     </a>
     <a href="/ar" class="flag-link">
-        <img src="egypt.svg" alt="Arabic">
+        <img src="egypt.svg" alt="Arabic" class="flag-icon">
     </a>
     <a href="/fr" class="flag-link">
-        <img src="france.svg" alt="French">
+        <img src="france.svg" alt="French" class="flag-icon">
     </a>
     <a href="/de" class="flag-link">
-        <img src="germany.svg" alt="German">
+        <img src="germany.svg" alt="German" class="flag-icon">
     </a>
     <a href="/hi" class="flag-link">
-        <img src="india.svg" alt="Hindi">
+        <img src="india.svg" alt="Hindi" class="flag-icon">
     </a>
-    
-    <!-- Row 2 -->
     <a href="/id" class="flag-link">
-        <img src="indonesia.svg" alt="Indonesian">
+        <img src="indonesia.svg" alt="Indonesian" class="flag-icon">
     </a>
     <a href="/ja" class="flag-link">
-        <img src="japan.svg" alt="Japanese">
+        <img src="japan.svg" alt="Japanese" class="flag-icon">
     </a>
     <a href="/tl" class="flag-link">
-        <img src="philippines.svg" alt="Filipino">
+        <img src="philippines.svg" alt="Filipino" class="flag-icon">
     </a>
     <a href="/ko" class="flag-link">
-        <img src="south-korea.svg" alt="Korean">
+        <img src="south-korea.svg" alt="Korean" class="flag-icon">
     </a>
     <a href="/es" class="flag-link">
-        <img src="spain.svg" alt="Spanish">
+        <img src="spain.svg" alt="Spanish" class="flag-icon">
     </a>
     <a href="/tr" class="flag-link">
-        <img src="turkey.svg" alt="Turkish">
+        <img src="turkey.svg" alt="Turkish" class="flag-icon">
     </a>
     <a href="/vi" class="flag-link">
-        <img src="vietnam.svg" alt="Vietnamese">
+        <img src="vietnam.svg" alt="Vietnamese" class="flag-icon">
     </a>
 </div>
         <section class="section" id="welcome">
