--- a/findword.html
+++ b/findword.html
@@ -199,6 +199,7 @@
         max-width: 600px;
         margin: 15px auto;
         padding: 0 10px;
+	border-bottom: 1px solid #eee;
     }
     
     .flag-link {
