--- a/findword.html
+++ b/findword.html
@@ -241,46 +241,46 @@
     
     <main>
 	<div class="flag-grid">
-    <a href="/bn" class="flag-link">
+    <a href="https://englishtests.online/bn/findword" class="flag-link">
         <img src="bangladesh.svg" alt="Bengali" class="flag-icon">
     </a>
-    <a href="/pt-br" class="flag-link">
+    <a href="https://englishtests.online/pt-br/findword" class="flag-link">
         <img src="brazil.svg" alt="Portuguese" class="flag-icon">
     </a>
-    <a href="/zh-CN" class="flag-link">
+    <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
         <img src="china.svg" alt="Chinese" class="flag-icon">
     </a>
-    <a href="/ar" class="flag-link">
+    <a href="https://englishtests.online/ar/findword" class="flag-link">
         <img src="egypt.svg" alt="Arabic" class="flag-icon">
     </a>
-    <a href="/fr" class="flag-link">
+    <a href="https://englishtests.online/fr/findword" class="flag-link">
         <img src="france.svg" alt="French" class="flag-icon">
     </a>
-    <a href="/de" class="flag-link">
+    <a href="https://englishtests.online/de/findword" class="flag-link">
         <img src="germany.svg" alt="German" class="flag-icon">
     </a>
-    <a href="/hi" class="flag-link">
+    <a href="https://englishtests.online/hi/findword" class="flag-link">
         <img src="india.svg" alt="Hindi" class="flag-icon">
     </a>
-    <a href="/id" class="flag-link">
+    <a href="https://englishtests.online/id/findword" class="flag-link">
         <img src="indonesia.svg" alt="Indonesian" class="flag-icon">
     </a>
-    <a href="/ja" class="flag-link">
+    <a href="https://englishtests.online/ja/findword" class="flag-link">
         <img src="japan.svg" alt="Japanese" class="flag-icon">
     </a>
-    <a href="/tl" class="flag-link">
+    <a href="https://englishtests.online/tl/findword" class="flag-link">
         <img src="philippines.svg" alt="Filipino" class="flag-icon">
     </a>
-    <a href="/ko" class="flag-link">
+    <a href="https://englishtests.online/ko/findword" class="flag-link">
         <img src="south-korea.svg" alt="Korean" class="flag-icon">
     </a>
-    <a href="/es" class="flag-link">
+    <a href="https://englishtests.online/es/findword" class="flag-link">
         <img src="spain.svg" alt="Spanish" class="flag-icon">
     </a>
-    <a href="/tr" class="flag-link">
+    <a href="https://englishtests.online/tr/findword" class="flag-link">
         <img src="turkey.svg" alt="Turkish" class="flag-icon">
     </a>
-    <a href="/vi" class="flag-link">
+    <a href="https://englishtests.online/vi/findword" class="flag-link">
         <img src="vietnam.svg" alt="Vietnamese" class="flag-icon">
     </a>
 </div>
