--- a/ar/findword.html
+++ b/ar/findword.html
@@ -216,10 +216,10 @@
             
             <div class="download-buttons">
 		<a href="https://play.google.com/store/apps/details?id=com.daniel.findword">
-        		<img src="googleplay.svg" alt="Google Play" class="image-button">
+        		<img src="https://englishtests.online/googleplay.svg" alt="Google Play" class="image-button">
     		</a>
 		<a href="https://apps.apple.com/app/findword/id6471604639">
-        		<img src="appstore.svg" alt="App Store" class="image-button">
+        		<img src="https://englishtests.online/appstore.svg" alt="App Store" class="image-button">
     		</a>
             </div>
         </section>
@@ -278,10 +278,10 @@
             
             <div class="download-buttons">
 		<a href="https://play.google.com/store/apps/details?id=com.daniel.findword">
-        		<img src="googleplay.svg" alt="Google Play" class="image-button">
+        		<img src="https://englishtests.online/googleplay.svg" alt="Google Play" class="image-button">
     		</a>
 		<a href="https://apps.apple.com/app/findword/id6471604639">
-        		<img src="appstore.svg" alt="App Store" class="image-button">
+        		<img src="https://englishtests.online/appstore.svg" alt="App Store" class="image-button">
     		</a>
             </div>
         </section>
