--- a/bn/findword.html
+++ b/bn/findword.html
@@ -214,10 +214,10 @@
             
             <div class="download-buttons">
 		<a href="https://play.google.com/store/apps/details?id=com.daniel.findword">
-        		<img src="googleplay.svg" alt="গুগল প্লে" class="image-button">
+        		<img src="https://englishtests.online/googleplay.svg" alt="গুগল প্লে" class="image-button">
     		</a>
 		<a href="https://apps.apple.com/app/findword/id6471604639">
-        		<img src="appstore.svg" alt="অ্যাপ স্টোর" class="image-button">
+        		<img src="https://englishtests.online/appstore.svg" alt="অ্যাপ স্টোর" class="image-button">
     		</a>
             </div>
         </section>
@@ -276,10 +276,10 @@
             
             <div class="download-buttons">
 		<a href="https://play.google.com/store/apps/details?id=com.daniel.findword">
-        		<img src="googleplay.svg" alt="গুগল প্লে" class="image-button">
+        		<img src="https://englishtests.online/googleplay.svg" alt="গুগল প্লে" class="image-button">
     		</a>
 		<a href="https://apps.apple.com/app/findword/id6471604639">
-        		<img src="appstore.svg" alt="অ্যাপ স্টোর" class="image-button">
+        		<img src="https://englishtests.online/appstore.svg" alt="অ্যাপ স্টোর" class="image-button">
     		</a>
             </div>
         </section>
