--- a/ja/findword.html
+++ b/ja/findword.html
@@ -213,10 +213,10 @@
             
             <div class="download-buttons">
 		<a href="https://play.google.com/store/apps/details?id=com.daniel.findword">
-        		<img src="googleplay.svg" alt="Google Playでダウンロード" class="image-button">
+        		<img src="https://englishtests.online/googleplay.svg" alt="Google Playでダウンロード" class="image-button">
     		</a>
 		<a href="https://apps.apple.com/app/findword/id6471604639">
-        		<img src="appstore.svg" alt="App Storeでダウンロード" class="image-button">
+        		<img src="https://englishtests.online/appstore.svg" alt="App Storeでダウンロード" class="image-button">
     		</a>
             </div>
         </section>
@@ -275,10 +275,10 @@
             
             <div class="download-buttons">
 		<a href="https://play.google.com/store/apps/details?id=com.daniel.findword">
-        		<img src="googleplay.svg" alt="Google Playでダウンロード" class="image-button">
+        		<img src="https://englishtests.online/googleplay.svg" alt="Google Playでダウンロード" class="image-button">
     		</a>
 		<a href="https://apps.apple.com/app/findword/id6471604639">
-        		<img src="appstore.svg" alt="App Storeでダウンロード" class="image-button">
+        		<img src="https://englishtests.online/appstore.svg" alt="App Storeでダウンロード" class="image-button">
     		</a>
             </div>
         </section>
