--- a/findword.html
+++ b/findword.html
@@ -242,46 +242,46 @@
     <main>
 	<div class="flag-grid">
     <a href="https://englishtests.online/bn/findword" class="flag-link">
-        <img src="bangladesh.svg" alt="Bengali" class="flag-icon">
+        <img src="flags/bangladesh.svg" alt="Bengali" class="flag-icon">
     </a>
     <a href="https://englishtests.online/pt-br/findword" class="flag-link">
-        <img src="brazil.svg" alt="Portuguese" class="flag-icon">
+        <img src="flags/brazil.svg" alt="Portuguese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
-        <img src="china.svg" alt="Chinese" class="flag-icon">
+        <img src="flags/china.svg" alt="Chinese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ar/findword" class="flag-link">
-        <img src="egypt.svg" alt="Arabic" class="flag-icon">
+        <img src="flags/egypt.svg" alt="Arabic" class="flag-icon">
     </a>
     <a href="https://englishtests.online/fr/findword" class="flag-link">
-        <img src="france.svg" alt="French" class="flag-icon">
+        <img src="flags/france.svg" alt="French" class="flag-icon">
     </a>
     <a href="https://englishtests.online/de/findword" class="flag-link">
-        <img src="germany.svg" alt="German" class="flag-icon">
+        <img src="flags/germany.svg" alt="German" class="flag-icon">
     </a>
     <a href="https://englishtests.online/hi/findword" class="flag-link">
-        <img src="india.svg" alt="Hindi" class="flag-icon">
+        <img src="flags/india.svg" alt="Hindi" class="flag-icon">
     </a>
     <a href="https://englishtests.online/id/findword" class="flag-link">
-        <img src="indonesia.svg" alt="Indonesian" class="flag-icon">
+        <img src="flags/indonesia.svg" alt="Indonesian" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ja/findword" class="flag-link">
-        <img src="japan.svg" alt="Japanese" class="flag-icon">
+        <img src="flags/japan.svg" alt="Japanese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/tl/findword" class="flag-link">
-        <img src="philippines.svg" alt="Filipino" class="flag-icon">
+        <img src="flags/philippines.svg" alt="Filipino" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ko/findword" class="flag-link">
-        <img src="south-korea.svg" alt="Korean" class="flag-icon">
+        <img src="flags/south-korea.svg" alt="Korean" class="flag-icon">
     </a>
     <a href="https://englishtests.online/es/findword" class="flag-link">
-        <img src="spain.svg" alt="Spanish" class="flag-icon">
+        <img src="flags/spain.svg" alt="Spanish" class="flag-icon">
     </a>
     <a href="https://englishtests.online/tr/findword" class="flag-link">
-        <img src="turkey.svg" alt="Turkish" class="flag-icon">
+        <img src="flags/turkey.svg" alt="Turkish" class="flag-icon">
     </a>
     <a href="https://englishtests.online/vi/findword" class="flag-link">
-        <img src="vietnam.svg" alt="Vietnamese" class="flag-icon">
+        <img src="flags/vietnam.svg" alt="Vietnamese" class="flag-icon">
     </a>
 </div>
         <section class="section" id="welcome">
