--- a/findword.html
+++ b/findword.html
@@ -245,13 +245,13 @@
         <img src="flags/bangladesh.svg" alt="Bengali" class="flag-icon">
     </a>
     <a href="https://englishtests.online/pt-br/findword" class="flag-link">
-        <img src="flags/brazil.svg" alt="Portuguese" class="flag-icon">
+        <img src="flags/brazil.png" alt="Portuguese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/zh-CN/findword" class="flag-link">
         <img src="flags/china.svg" alt="Chinese" class="flag-icon">
     </a>
     <a href="https://englishtests.online/ar/findword" class="flag-link">
-        <img src="flags/egypt.svg" alt="Arabic" class="flag-icon">
+        <img src="flags/egypt.png" alt="Arabic" class="flag-icon">
     </a>
     <a href="https://englishtests.online/fr/findword" class="flag-link">
         <img src="flags/france.svg" alt="French" class="flag-icon">
@@ -260,7 +260,7 @@
         <img src="flags/germany.svg" alt="German" class="flag-icon">
     </a>
     <a href="https://englishtests.online/hi/findword" class="flag-link">
-        <img src="flags/india.svg" alt="Hindi" class="flag-icon">
+        <img src="flags/india.png" alt="Hindi" class="flag-icon">
     </a>
     <a href="https://englishtests.online/id/findword" class="flag-link">
         <img src="flags/indonesia.svg" alt="Indonesian" class="flag-icon">
@@ -275,7 +275,7 @@
         <img src="flags/south-korea.svg" alt="Korean" class="flag-icon">
     </a>
     <a href="https://englishtests.online/es/findword" class="flag-link">
-        <img src="flags/spain.svg" alt="Spanish" class="flag-icon">
+        <img src="flags/spain.png" alt="Spanish" class="flag-icon">
     </a>
     <a href="https://englishtests.online/tr/findword" class="flag-link">
         <img src="flags/turkey.svg" alt="Turkish" class="flag-icon">
